src/objects/Task__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <formula>Start_Date__c +  Estimated_Effort__c</formula>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Effort__c</fullName>
        <label>Estimated Effort (Days)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Milestone__c</fullName>
        <label>Milestone</label>
        <referenceTo>Milestone__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Precedent_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Precedent task (pre-requisite) if applicable</description>
        <label>Precedent Task</label>
        <referenceTo>Task__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Mark any asset that needs to be used when completing this task</description>
        <label>Project Asset</label>
        <referenceTo>Project_Asset__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Task</label>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>